# AmeDigital-APIStarWars-Challenge

./: .gitignore  DataBase.db  Makefile  README.md  app.py  db_connection.py  dockerfile  pyproject.toml  requirements.txt  routes.py  sql_alchemy.py
app/: __init__.py  routes.py
models/: planetmodel.py
resources/: planet.py
starwars_api/: app.py  db_connection.py  routes.py
starwars_api/models/: db_connection.py
starwars_api/routes/: planet.py  planets.py  swapi.py
