[tool.poetry]
name = "amedigital-apistarwars-challenge"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
PyMySQL = "^1.0.2"
rich = "^12.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
